--- a/app/views/cf_templates/_form.html.erb
+++ b/app/views/cf_templates/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="form-group">
     <%= f.label :name, t('cf_templates.subject'), class: 'control-label col-sm-4' %>
     <div class="col-sm-5">
-      <%= f.text_field :name, class: "form-control" %>
+      <%= f.text_field :name, class: "form-control", required: true%>
     </div>
   </div>
 
@@ -16,7 +16,7 @@
   <div class="form-group">
     <%= f.label :value, t('cf_templates.cf_template'), class: 'control-label col-sm-4' %>
     <div class="col-sm-5">
-      <%= f.text_area :value, size: "20x10", class: "form-control" %>
+      <%= f.text_area :value, size: "20x10", class: "form-control", required: true %>
     </div>
   </div>
 
