--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -2,13 +2,14 @@
   <div class="form-group">
     <%= f.label :code, t('clients.code'), class: 'control-label col-sm-2' %>
     <div class="col-sm-5">
-      <%= f.text_field :code, class: 'form-control' %>
+      <%= f.text_field :code, class: 'form-control', required: true %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :name, t('clients.name'), class: 'control-label col-sm-2'%>
     <div class="col-sm-5">
-      <%= f.text_field :name, class: 'form-control' %>
+      <%= f.text_field :name, class: 'form-control', required: true %>
+      <span></span>
     </div>
   </div>
 
