--- a/app/views/dishes/_form.html.erb
+++ b/app/views/dishes/_form.html.erb
@@ -12,7 +12,7 @@
   <div class="form-group">
     <%= f.label :name, t('dishes.name'), class: 'control-label col-sm-2' %>
     <div class="col-sm-5">
-      <%= f.text_field :name, class: 'form-control' %>
+      <%= f.text_field :name, class: 'form-control', required: true %>
     </div>
   </div>
 
