--- a/app/views/app_settings/_panel_content_system.html.erb
+++ b/app/views/app_settings/_panel_content_system.html.erb
@@ -7,7 +7,7 @@
     <div class="form-group">
       <label for="log_directory" class="col-sm-3 control-label"><%= t 'app_settings.log_directory' %></label>
       <div class="col-sm-7">
-        <input type="text" class="form-control" id="log_directory" name="log_directory">
+        <input type="text" class="form-control" id="log_directory" name="log_directory" pattern="^[~/].+" required>
         <p class="help-block"><%= I18n.t('app_settings.msg.log_directory') %></p>
       </div>
     </div>
@@ -20,7 +20,7 @@
     <div class="form-group">
       <label for="access_key" class="col-sm-3 control-label"><%= t 'app_settings.access_key' %></label>
       <div class="col-sm-7">
-        <input type="text" class="form-control" id="access_key" name="access_key">
+        <input type="text" class="form-control" id="access_key" name="access_key" pattern="[^\s]+" required>
         <p class="help-block"><%= t('app_settings.msg.access_key') %></p>
       </div>
     </div>
@@ -28,7 +28,7 @@
     <div class="form-group">
       <label for="secret_access_key" class="col-sm-3 control-label"><%= t 'app_settings.secret_access_key' %></label>
       <div class="col-sm-7">
-        <input type="text" class="form-control form-control-masked" id="secret_access_key" name="secret_access_key">
+        <input type="text" class="form-control form-control-masked" id="secret_access_key" name="secret_access_key" pattern="[^\s]+" required>
         <p class="help-block"><%= t('app_settings.msg.secret_access_key') %></p>
       </div>
     </div>
@@ -48,7 +48,7 @@
       <label class="col-sm-3 control-label"><%= t 'app_settings.aws_keypair' %></label>
       <div class="col-sm-7">
         <label for="keypair_name" class="control-label"><%= t 'app_settings.keypair_name' %></label>
-        <input id="keypair_name" class="form-control ec2-private-key-name" type="text" name="keypair_name">
+        <input id="keypair_name" class="form-control ec2-private-key-name" type="text" name="keypair_name" required maxlength="255">
 
         <label for="keypair_value" class="control-label"><%= t 'app_settings.private_key' %></label>
         <textarea id="keypair_value" class="form-control ec2-private-key-value" name="keypair_value" placeholder="<%= t 'common.msg.key_droppable' %>" rows="7"></textarea>
