--- a/app/views/vue/_serverspec_tabpane.html.erb
+++ b/app/views/vue/_serverspec_tabpane.html.erb
@@ -71,12 +71,15 @@
                 <option value=<%= e %>><%= t "serverspec_schedules.day_of_week.#{e}" %></option>
               <% end %>
             </select>
-            <select v-model="time" v-attr="disabled: loading_s" class="form-control">
+            <select v-model="time" v-attr="disabled: loading_s" v-if="frequency !== 'intervals'" class="form-control">
               <% 0.upto(23) do |n| %>
                 <option><%= n %></option>
               <% end %>
             </select>
-            <%= t 'serverspec_schedules.o_clock' %>
+            <label v-if="frequency !== 'intervals'"><%= t 'serverspec_schedules.o_clock' %></label>
+            <input type="number" min="1" max="12" v-model="time" v-attr="disabled: loading_s" v-if="frequency === 'intervals'" class="form-control">
+            <label v-if="frequency === 'intervals'"><%= t 'serverspec_schedules.hours' %></label>
+            <div v-if="frequency === 'intervals'"><%= t 'serverspec_schedules.next_run' %></div>
           </div>
         </form>
       </div>
