--- a/app/views/infrastructures/_form.html.erb
+++ b/app/views/infrastructures/_form.html.erb
@@ -25,7 +25,10 @@
   <div class="form-group">
     <label class="col-sm-2 control-label"><%= t 'app_settings.aws_keypair' %></label>
     <div class="col-sm-5">
-<% unless controller.action_name == "edit" %>
+<% if controller.action_name == "edit" ||  controller.action_name == "update" %>
+      <%= uneditable_input(@infrastructure.ec2_private_key.name) if @infrastructure.ec2_private_key_id %>
+      <%= uneditable_input(t('infrastructures.msg.no_keypair')) unless @infrastructure.ec2_private_key_id %>
+<% else %>
       <p class="help-block"><%= t('ec2_private_keys.msg.enter_or_generate') %></p>
       <p><button class="btn btn-default btn-sm create_ec2_key"><%= t 'ec2_private_keys.btn.new' %></button></p>
       <label for="keypair_name" class="control-label"><%= t 'app_settings.keypair_name' %></label>
@@ -34,9 +37,6 @@
       <label for="keypair_value" class="control-label"><%= t 'app_settings.private_key' %></label>
       <textarea id="keypair_value" class="form-control ec2-private-key-value allow-empty" name="infrastructure[keypair_value]" placeholder="<%= t 'common.msg.key_droppable' %>" rows="7" required></textarea>
       <p class="help-block"><%= t('infrastructures.msg.help_keypair') %></p>
-<% else %>
-      <%= uneditable_input(@infrastructure.ec2_private_key.name) if @infrastructure.ec2_private_key_id %>
-      <%= uneditable_input(t('infrastructures.msg.no_keypair')) unless @infrastructure.ec2_private_key_id %>
 <% end %>
     </div>
   </div>
