--- a/app/views/vue/_elb_tabpane.html.erb
+++ b/app/views/vue/_elb_tabpane.html.erb
@@ -1,4 +1,3 @@
-<%# TODO: I18n %>
 <script id="elb-tabpane-template" type="text/template">
 <h3 class="page-header">{{* physical_id}}</h3>
 
@@ -6,11 +5,11 @@
   <h4 class="page-header">DNS name</h4>
   <a v-attr="href: 'http://' + dns_name" target="_blank">{{dns_name}}</a>
 
-  <h4 class="page-header">Listeners</h4>
+  <h4 class="page-header"><%=t('ec2_instances.listeners')%></h4>
   <table class="table table-striped">
     <thead>
       <tr>
-        <th>Protocol</th> <th>LoadBalancer Port</th> <th>Instance Protocol</th> <th>Instance Port</th> <th>Expiration date</th>
+        <th><%=t('ec2_instances.protocol')%></th> <th><%=t('ec2_instances.lb_port')%></th> <th><%=t('ec2_instances.instance_protocol')%></th> <th><%=t('ec2_instances.instance_port')%></th> <th><%=t('ec2_instances.expiration_date')%></th>
       </tr>
     </thead>
 
@@ -25,7 +24,7 @@
     </tbody>
   </table>
 
-  <h4 class="page-header">Instances</h4>
+  <h4 class="page-header"><%=t('ec2_instances.instances')%></h4>
   <div class="col-md-4 col-sm-6 col-xs-12" v-repeat="e: ec2_instances">
     <div class="panel" v-class="panel_class(state)">
       <div class="panel-heading">
@@ -34,15 +33,15 @@
       <table class="table">
         <tbody>
           <tr>
-            <th>State</td>
+            <th><%=t('ec2_instances.state')%></td>
             <td><span class="label" v-class="label_class(state)">{{* e.state}}</span></td>
           </tr>
           <tr>
-            <th>ReasonCode</td>
+            <th><%=t('ec2_instances.reason_code')%></td>
             <td>{{* e.reason_code}}</td>
           </tr>
           <tr>
-            <th>Description</td>
+            <th><%=t('ec2_instances.description')%></td>
             <td>{{* e.description}}</td>
           </tr>
         </tbody>
