--- a/app/views/vue/_elb_tabpane.html.erb
+++ b/app/views/vue/_elb_tabpane.html.erb
@@ -26,7 +26,7 @@
 
   <h4 class="page-header"><%=t('ec2_instances.instances')%></h4>
   <div class="col-md-4 col-sm-6 col-xs-12" v-repeat="e: ec2_instances">
-    <div class="panel" v-class="panel_class(state)">
+    <div class="panel" v-class="panel_class(e.state)">
       <div class="panel-heading">
           <a href="#" v-on="click: show_ec2(e.instance_id)">{{* e.instance_id}}</a>&nbsp;
       </div>
@@ -34,7 +34,7 @@
         <tbody>
           <tr>
             <th><%=t('ec2_instances.state')%></td>
-            <td><span class="label" v-class="label_class(state)">{{* e.state}}</span></td>
+            <td><span class="label" v-class="label_class(e.state)">{{* e.state}}</span></td>
           </tr>
           <tr>
             <th><%=t('ec2_instances.reason_code')%></td>
