Show cook/serverspec/yum date.

--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -98,15 +98,21 @@ Arguments:
 
     <div class="col-xs-4 col-sm-12">
       <h6><%= t 'nodes.latest_cook_status' %></h6>
-      <span v-class="cook_status_class" class="label">{{cook_status}}</span>
+      <bootstrap-tooltip v-with="title: cook_time">
+        <span v-class="cook_status_class" class="label">{{cook_status}}</span>
+      </bootstrap-tooltip>
     </div>
     <div class="col-xs-4 col-sm-12">
       <h6><%= t 'nodes.latest_serverspec_status' %></h6>
-      <span v-class="serverspec_status_class" class="label">{{serverspec_status}}</span>
+      <bootstrap-tooltip v-with="title: serverspec_time">
+        <span v-class="serverspec_status_class" class="label">{{serverspec_status}}</span>
+      </bootstrap-tooltip>
     </div>
     <div class="col-xs-4 col-sm-12">
       <h6><%= t 'nodes.latest_update_status' %></h6>
-      <span v-class="update_status_class" class="label">{{update_status}}</span>
+      <bootstrap-tooltip v-with="title: update_time">
+        <span v-class="update_status_class" class="label">{{update_status}}</span>
+      </bootstrap-tooltip>
     </div>
   </div>
 
