--- a/app/views/vue/_ec2_tabpane.html.erb
+++ b/app/views/vue/_ec2_tabpane.html.erb
@@ -143,11 +143,11 @@ Arguments:
   <%# Buttons %>
   <div class="col-xs-12" v-if="!inprogress">
     <div class="form-actions-top">
-      <button v-on="click: cook()" v-class="border-blink: cook_status === 'UnExecuted'" class="btn btn-sm btn-primary">
+      <button v-on="click: cook()" v-class="border-blink: cook_status === 'UnExecuted' && ec2.attribute_set" v-attr="disabled: !ec2.attribute_set" class="btn btn-sm btn-primary">
         <%= t 'nodes.cook'%>
       </button>
       <button v-on="click: edit_runlist()" class="btn btn-default btn-sm"><%= t 'nodes.btn.edit_runlist' %></button>
-      <button v-on="click: edit_attr()" class="btn btn-sm btn-default"><%= t 'nodes.btn.instance_settings' %></button>
+      <button v-on="click: edit_attr()" class="btn btn-sm btn-default" v-class="border-blink: !ec2.attribute_set"><%= t 'nodes.btn.instance_settings' %></button>
       <div class="dropup" style="display: inline-block">
         <button class="btn btn-sm btn-warning dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
           yum
