--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -272,3 +272,22 @@ h6.page-header {
 }
 
 [v-cloak] {display: none;}
+
+table {
+  border-width: 0;
+  border-style: none;
+  border-color: #0000ff;
+  border-collapse: collapse;
+}
+
+/*for QR code*/
+.QRCode td {
+  border-left: solid 3px #000;
+  padding: 0;
+  margin: 0;
+  width: 0px;
+  height: 3px;
+}
+
+.QRCode td.black { border-color: #000; }
+.QRCode td.white { border-color: #fff; }
