--- a/app/views/users_admin/_edit.html.erb
+++ b/app/views/users_admin/_edit.html.erb
@@ -105,7 +105,7 @@
 
 <div class="col-md-12 col-sm-12">
   <div class="form-actions-top">
-    <button class="btn btn-primary btn-sm">
+    <button class="btn btn-primary btn-sm" v-on="click: submit()">
       <%= t('common.btn.save_changes') %>
     </button>
   </div>
