--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -79,7 +79,7 @@
         <stack-events-table events="{{current_infra.events}}"></stack-events-table>
       </div>
 
-      <add-modify-tabpane      class="tab-pane" v-show="!loading" v-if="tabpane_active('add_modify')"       v-with="current_infra.add_modify"></add-modify-tabpane>
+      <add-modify-tabpane      class="tab-pane" v-show="!loading" v-if="tabpane_active('add_modify')"       templates="{{* current_infra.templates}}"></add-modify-tabpane>
       <insert-cf-params        class="tab-pane" v-show="!loading" v-if="tabpane_active('insert-cf-params')" v-with="current_infra.insert_cf_params"></insert-cf-params>
       <add-ec2-tabpane         class="tab-pane" v-show="!loading" v-if="tabpane_active('add-ec2')"          ></add-ec2-tabpane>
       <cf-history-tabpane      class="tab-pane" v-show="!loading" v-if="tabpane_active('cf_history')"       v-with="histories: current_infra.cf_history"></cf-history-tabpane>
