--- a/app/views/vue/_add_modify_tabpane.html.erb
+++ b/app/views/vue/_add_modify_tabpane.html.erb
@@ -1,12 +1,3 @@
-<%# Argumants
-==============
-
-- histories
-- globals
-
-Array of CfTemplate instance.
-
-%>
 <script id="add-modify-tabpane-template" type="text/template">
 <div class="col-md-8 col-sm-8">
   <fieldset>
@@ -37,12 +28,12 @@ Array of CfTemplate instance.
   <div class="tab-content">
     <div class="tab-pane active" id="history-json-tab">
       <select class="form-control" size="20" v-model="selected_cft_id" number v-on="dblclick: select_cft()">
-        <option v-repeat="t: histories" value="{{t.id}}" v-text="t.name"></option>
+        <option v-repeat="t: templates.histories" value="{{t.id}}" v-text="t.name"></option>
       </select>
     </div>
     <div class="tab-pane" id="global-json-tab">
       <select class="form-control" size="20" v-model="selected_cft_id" number v-on="dblclick: select_cft()">
-        <option v-repeat="t: globals"   value="{{t.id}}" v-text="t.name"></option>
+        <option v-repeat="t: templates.globals"   value="{{t.id}}" v-text="t.name"></option>
       </select>
     </div>
   </div>
