[FIX] v-show loading

--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -79,21 +79,23 @@
         <stack-events-table events="{{current_infra.events}}"></stack-events-table>
       </div>
 
-      <add-modify-tabpane      v-show="!loading" v-if="tabpane_active('add_modify')"       templates="{{* current_infra.templates}}"></add-modify-tabpane>
-      <insert-cf-params        v-show="!loading" v-if="tabpane_active('insert-cf-params')" v-with="current_infra.insert_cf_params"></insert-cf-params>
-      <add-ec2-tabpane         v-show="!loading" v-if="tabpane_active('add-ec2')"          ></add-ec2-tabpane>
-      <cf-history-tabpane      v-show="!loading" v-if="tabpane_active('cf_history')"       v-with="histories: current_infra.cf_history"></cf-history-tabpane>
-      <stack-events-table      v-show="!loading" v-if="tabpane_active('event_logs')"       v-with="events: current_infra.events"></stack-events-table>
-      <monitoring-tabpane      v-show="!loading" v-if="tabpane_active('monitoring')"       ></monitoring-tabpane>
-      <edit-monitoring-tabpane v-show="!loading" v-if="tabpane_active('edit-monitoring')"  ></edit-monitoring-tabpane>
-      <infra-logs-tabpane      v-show="!loading" v-if="tabpane_active('infra_logs')"       v-with="infra_logs: current_infra.infra_logs"></infra-logs-tabpane>
-      <ec2-tabpane             v-show="!loading" v-if="tabpane_active('ec2')"              v-with="physical_id: tabpaneGroupID"></ec2-tabpane>
-      <rds-tabpane             v-show="!loading" v-if="tabpane_active('rds')"              v-with="physical_id: tabpaneGroupID"></rds-tabpane>
-      <elb-tabpane             v-show="!loading" v-if="tabpane_active('elb')"              v-with="physical_id: tabpaneGroupID"></elb-tabpane>
-      <s3-tabpane              v-show="!loading" v-if="tabpane_active('s3')"               v-with="physical_id: tabpaneGroupID"></s3-tabpane>
-      <edit-runlist-tabpane    v-show="!loading" v-if="tabpane_active('edit_runlist')"     ></edit-runlist-tabpane>
-      <edit-attr-tabpane       v-show="!loading" v-if="tabpane_active('edit_attr')"        ></edit-attr-tabpane>
-      <serverspec-tabpane      v-show="!loading" v-if="tabpane_active('serverspec')"       ></serverspec-tabpane>
+      <div v-show="!loading">
+        <add-modify-tabpane      v-if="tabpane_active('add_modify')"       templates="{{* current_infra.templates}}"></add-modify-tabpane>
+        <insert-cf-params        v-if="tabpane_active('insert-cf-params')" v-with="current_infra.insert_cf_params"></insert-cf-params>
+        <add-ec2-tabpane         v-if="tabpane_active('add-ec2')"          ></add-ec2-tabpane>
+        <cf-history-tabpane      v-if="tabpane_active('cf_history')"       v-with="histories: current_infra.cf_history"></cf-history-tabpane>
+        <stack-events-table      v-if="tabpane_active('event_logs')"       v-with="events: current_infra.events"></stack-events-table>
+        <monitoring-tabpane      v-if="tabpane_active('monitoring')"       ></monitoring-tabpane>
+        <edit-monitoring-tabpane v-if="tabpane_active('edit-monitoring')"  ></edit-monitoring-tabpane>
+        <infra-logs-tabpane      v-if="tabpane_active('infra_logs')"       v-with="infra_logs: current_infra.infra_logs"></infra-logs-tabpane>
+        <ec2-tabpane             v-if="tabpane_active('ec2')"              v-with="physical_id: tabpaneGroupID"></ec2-tabpane>
+        <rds-tabpane             v-if="tabpane_active('rds')"              v-with="physical_id: tabpaneGroupID"></rds-tabpane>
+        <elb-tabpane             v-if="tabpane_active('elb')"              v-with="physical_id: tabpaneGroupID"></elb-tabpane>
+        <s3-tabpane              v-if="tabpane_active('s3')"               v-with="physical_id: tabpaneGroupID"></s3-tabpane>
+        <edit-runlist-tabpane    v-if="tabpane_active('edit_runlist')"     ></edit-runlist-tabpane>
+        <edit-attr-tabpane       v-if="tabpane_active('edit_attr')"        ></edit-attr-tabpane>
+        <serverspec-tabpane      v-if="tabpane_active('serverspec')"       ></serverspec-tabpane>
+      </div>
     </div>
   </div>
 </div>
