--- a/app/views/infrastructures/_show.html.erb
+++ b/app/views/infrastructures/_show.html.erb
@@ -80,8 +80,8 @@
       </div>
 
       <div v-show="!loading">
-        <add-modify-tabpane      v-if="tabpane_active('add_modify')"       templates="{{* current_infra.templates}}"></add-modify-tabpane>
-        <insert-cf-params        v-if="tabpane_active('insert-cf-params')" v-with="current_infra.insert_cf_params"></insert-cf-params>
+        <add-modify-tabpane      v-if="tabpane_active('add_modify')"       templates="{{* current_infra.templates}}" result="{{@ current_infra.add_modify}}"></add-modify-tabpane>
+        <insert-cf-params        v-if="tabpane_active('insert-cf-params')" ></insert-cf-params>
         <add-ec2-tabpane         v-if="tabpane_active('add-ec2')"          ></add-ec2-tabpane>
         <cf-history-tabpane      v-if="tabpane_active('cf_history')"       v-with="histories: current_infra.cf_history"></cf-history-tabpane>
         <stack-events-table      v-if="tabpane_active('event_logs')"       v-with="events: current_infra.events"></stack-events-table>
