[FIX] Enable to work stack-events-table

--- a/app/views/vue/_stack_events_table.html
+++ b/app/views/vue/_stack_events_table.html
@@ -13,7 +13,7 @@
       </thead>
       <tbody>
         <tr v-repeat="events" v-class="event_tr_class(status)">
-          <td v-text="time | toLocaleString"></td>
+          <td v-text="toLocaleString(time)"></td>
           <td v-text="type"></td>
           <td v-text="logical"></td>
           <td v-text="status"></td>
